--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "prestart": "npm run build",
-    "start": "nodemon server.js",
+    "start": "nodemon ./server/server.js",
     "dev": "webpack-dev-server --env.NODE_ENV=development --open",
     "build": "webpack --env.NODE_ENV=production",
     "test": "jest"
@@ -26,6 +26,7 @@
   "readme": "ERROR: No README data found!",
   "_id": "geocoffeereact@1.0.0",
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.16.4",
     "file-loader": "^3.0.1",
     "react": "^16.8.6",
@@ -42,10 +43,16 @@
     "css-loader": "^2.1.1",
     "enzyme": "^3.9.0",
     "enzyme-adapter-react-16": "^1.13.0",
+    "eslint": "^5.3.0",
+    "eslint-config-airbnb": "^17.1.0",
+    "eslint-plugin-import": "^2.17.2",
+    "eslint-plugin-jsx-a11y": "^6.2.1",
+    "eslint-plugin-react": "^7.13.0",
     "jest": "^24.8.0",
     "node-sass": "^4.12.0",
     "sass-loader": "^7.1.0",
     "style-loader": "^0.23.1",
+    "supertest": "^4.0.2",
     "url-loader": "^1.1.2",
     "webpack": "^4.31.0",
     "webpack-cli": "^3.3.2",
