--- a/package.json
+++ b/package.json
@@ -26,9 +26,11 @@
   "readme": "ERROR: No README data found!",
   "_id": "geocoffeereact@1.0.0",
   "dependencies": {
+    "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "express": "^4.16.4",
     "file-loader": "^3.0.1",
+    "pg": "^7.11.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "semantic-ui-css": "^2.4.1",
